Fixes wrapping issues with small screens/mobile

--- a/app/assets/stylesheets/themes/default/layout/_body.scss
+++ b/app/assets/stylesheets/themes/default/layout/_body.scss
@@ -18,6 +18,7 @@ body#tinymce {
 
 #container {
   min-height: 100%;
+  min-width: 1020px;
   background: {
     color: $blue;
     image: image-url("#{$theme-path}/layout/background.jpg");
